@@ -14,6 +14,9 @@
 
 3.7.4 to 3.8: (December xx, 2012)
 
+  * Improved regressions in PAL format autodetection, introduced in the
+    past several releases.
+
   * Fixed crash when loading invalid PNG files in ROM browser.
 
   * Snapshots generated by Stella now include more informative info, such
